fix dialog font color on ios?

--- a/index.css
+++ b/index.css
@@ -77,6 +77,7 @@ main {
             gap: 8px;
             button {
                 font-size: initial;
+                color: #000;
                 border-radius: 5px;
                 border: 0;
 
